--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MyTodoList</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="is-full"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
